assets/css/stylesheet.css
/*FONT IMPORT*/
@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Space+Grotesk:wght@300..700&display=swap");

/*CSS VARIABLES*/
:root {
  --primary-font: "Nunito", sans-serif;
  --secondary-font: "Space Grotesk", sans-serif;
}

body {
  font-family: var(--primary-font);
  background-color: #f8f9fa;
  color: #495057;
}

h1,
h2,
h3 {
  font-family: var(--secondary-font);
  color: #afd746;
}

/* Custom styles for the navbar */
.navbar-brand img {
  max-height: 50px;
}

.navbar-brand {
  padding-left: 100px; /* Add padding to the logo */
}

.navbar-nav .nav-link {
  color: #c8e292;
  font-family: var(--primary-font);
  font-size: larger;
}

.navbar-nav .nav-link:hover {
  color: white;
  background-color: rgba(175, 215, 70, 0.5); 

}

.navbar-nav {
  margin-left: auto; /* Align links to the right */
  padding-right: 100px;
}

.navbar {
  background-color: rgba(32, 183, 252, 0.0);

}

/*HERO SECTION*/
.hero-section {
  background-image: url(../images/Hero_frog.jpeg);
  min-height: 25rem;
  background-size: cover;
  background-position: center;
  background-attachment: relative;
  width: 100%;
  margin-bottom: 2rem;
}

.hero-section h1,
.hero-section p {
  
  background-color: rgba(175, 215, 70, 0.5); /* Apply background color to h1 and p */
  border-radius: 10px; /* Add border radius */
}

.hero-section h1,
.hero-section p,
.hero-section a {
  text-align: center; 
}

/*card section*/

.card-body .card-title, h5 {
  font-family: var(--secondary-font);
  color: #afd746;
}

.card-text {
  font-family: var(--primary-font);
}

.card-img-top {

  object-fit: cover; /* Ensure the image covers the entire card */
}

